# shell-interface

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: python-ci.yml  python-publish.yml
docker-images/: arch  debian  python3.10  python3.11  python3.8  python3.9
dockerfiles/: arch  debian  python3.10  python3.11  python3.12  python3.8  python3.9
src/shell_interface/: shell_interface.py
tests/: test_shell_interface.py
