[project]
name = "shell-interface"
version = "0.14.0"
description = "Helpful and convenient utilities to interact with UNIX shells"
authors = [{name = "Max Görner", email = "5477952+MaxG87@users.noreply.github.com"}]
repository = "https://github.com/MaxG87/shell-interface"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.9,<3.14"
dependencies = []

[project.optional-dependencies]
logging = [
    "loguru",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "hypothesis>=6.125.1",
    "jedi>=0.19.2",
    "mypy>=1.14.1",
    "pdbpp>=0.10.3",
    "pynvim>=0.5.2",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.4",
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
hypothesis = "^6.92.1"
pytest = ">=7.4.3,<9.0.0"
pynvim = "^0.5.0"
jedi = "^0.19.1"
pdbpp = "^0.10.3"
pytest-cov = ">=4.1,<7.0"
mypy = "^1.7.1"
black = ">=23.12,<26.0"
ruff = ">=0.1.8,<0.10.0"

[tool.mypy]
allow_any_unimported = false
warn_unreachable = true
enable_error_code = [
    "possibly-undefined"
]
strict = true


[tool.pytest.ini_options]
addopts = [
    "--cov", "src",
    "--cov-branch",
    "--cov-fail-under", "75"
]
testpaths = ["tests"]

[tool.ruff]
src = [".", "src/"]

[tool.ruff.lint]
select = ["A", "B", "C", "F", "I", "ISC", "PIE", "PL", "Q", "RUF", "SIM", "TID", "W", "YTT"]
ignore = ["E"]
mccabe.max-complexity = 6

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
